# network-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  ProjectConfig.hpp.in  README.md  main.cpp
data/: testalist.csv  testcoeffs.csv
doc/html/: annotated.html  classes.html  classnet_1_1_network-members.html  classnet_1_1_network.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  index.html  md__l_i_c_e_n_s_e.html  md__r_e_a_d_m_e.html  menudata.js  network_8hpp_source.html  pages.html  todo.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_1.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
include/: CMakeLists.txt  network.cpp  network.hpp
latex/: md__r_e_a_d_m_e.tex  refman.tex
